[gd_scene load_steps=3 format=3 uid="uid://baf2egdipkurt"]

[ext_resource type="Script" path="res://Interface/component/agent_preview.gd" id="1_2mxmf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8cc3e"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="s" type="Panel"]
custom_minimum_size = Vector2(120, 150)
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_2mxmf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="AgentName" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "XXX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Panel" type="Panel" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 2

[node name="Job_Idle" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "IDLE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8cc3e")

[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
